other spacings archive-receips &  more space site-info class & more sematic objects (HTML5) & gradient-end-page change & correct class definition button wsl-pepper-one template & more calm background-animation & semantic elements content-recipes & also on content.php

--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ header#masthead {
   width: 100%;
   height: 260px;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -1131,11 +1131,21 @@ body:not(.theme-preset-active) footer#colophon {
   } 
 }
 
-
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  header#masthead {
+    padding: 1.5rem 1rem;
+  }
+
+  #sidebar {
+    padding: 1.5rem 1.5rem 0 1.5rem;
+  }
 
   #ytplayer {
     display: none;
+  }
+
+  div.wp-block-column.ml-md-5.pl-md-5 {
+    flex-basis: 100% !important;
   }
 
   .reverse-columns {
@@ -1221,6 +1231,10 @@ body:not(.theme-preset-active) footer#colophon {
 
   .post-thumbnail-inner-content {
     padding: 1rem !important;
+  }
+
+  .post-thumbnail {
+    background-position: center;
   }
 
   .btn-overview { /*mad solution! */
@@ -1319,8 +1333,9 @@ body:not(.theme-preset-active) footer#colophon {
 --------------------------------------------------------------*/
 @media only screen and (max-width: 960px) {
   .wp-block-column:nth-child(2n) {
-    margin: 0 16px;
+    padding: 0 16px;
   }
+  
   .wp-block-column {
       flex-basis: calc(33% - 16px);
       flex-grow: 0;
@@ -1328,10 +1343,6 @@ body:not(.theme-preset-active) footer#colophon {
 
   .wp-block-spacer {
     height: 1.85rem !important;
-  }
-
-  div.container > div > div > div.wp-block-columns.alignfull > div.wp-block-column.ml-md-5.pl-md-5 {
-    flex-basis: 58% !important;
   }
 
   h2.recipes-month-name {
@@ -1364,6 +1375,7 @@ body:not(.theme-preset-active) footer#colophon {
     font-size: 80%;
   }
 }
+
 /*--------------------------------------------------------------
 ## iPad
 --------------------------------------------------------------*/
